--- a/dockerswarm/Vagrantfile
+++ b/dockerswarm/Vagrantfile
@@ -90,6 +90,7 @@ Vagrant.configure("2") do |config|
       
       i.vm.provision "shell", path: "./provisionfull.sh", run: "once"
       i.vm.provision "shell", path: "./provisiondockerlink.sh", run: "once"
+      i.vm.provision "shell", inline: "sudo apt install -y --no-install-recommends gnupg pass libice6 libsm6 libxmu6"
    
       if auto 
         i.vm.provision "shell", inline: "docker swarm init --advertise-addr #{manager_ip}"
