--- a/ansible/roles/EpelRelease/tasks/main.yml
+++ b/ansible/roles/EpelRelease/tasks/main.yml
@@ -4,11 +4,11 @@
      name: epel-release
      state: latest
    become: True
-   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '8'
+   when: ansible_facts['os_family'] == 'Centos' and ansible_facts ['distribution_major_version'] == '8'
 
  - name: Enable EPEL Repository on CentOS 7
    yum:
      name: epel-release
      state: latest
    become: True
-   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
+   when: ansible_facts['os_family'] == 'Centos' and ansible_facts ['distribution_major_version'] == '7'
