--- a/centos7/Vagrantfile
+++ b/centos7/Vagrantfile
@@ -42,7 +42,7 @@ Vagrant.configure("2") do |config|
       i.vm.provision "file", source: "../ansible/ansible.pub", destination: "/home/vagrant/.ssh/ansible.pub"
       i.vm.provision "shell", inline: "cat /home/vagrant/.ssh/ansible.pub >> /home/vagrant/.ssh/authorized_keys"
 
-      i.vm.provvision "shell", path: "./provision.sh", run: "once"        
+      i.vm.provision "shell", path: "./provision.sh", run: "once"        
       i.vm.provision :ansible do |ansible|
         ansible.verbose = "vv"
 #        ansible.extra_vars = { "ansible_python_interpreter" => "/usr/bin/python3" }
