--- a/centosprivx/Vagrantfile
+++ b/centosprivx/Vagrantfile
@@ -6,7 +6,7 @@
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
 manager_hostname = "centos7privx"
-user = "vadmin"
+user = "vmadmin"
 guest_sshkeys = "../ansible/ansible.pub"
 
 Vagrant.configure("2") do |config|
@@ -15,7 +15,9 @@ Vagrant.configure("2") do |config|
         v.customize ["modifyvm", :id, "--boot1", "disk"]
         v.customize ["modifyvm", :id, "--boot2", "none"]
         v.customize ["modifyvm", :id, "--boot3", "none"]
+        v.customize ["modifyvm", :id, "--vram",  "16"]
         v.customize ["modifyvm", :id, "--graphicscontroller", "none"]
+        v.customize ["modifyvm", :id, "--vrde",  "off"]
         v.memory = 2048
         v.cpus = 2
         v.name = "#{manager_hostname}"
@@ -27,7 +29,7 @@ Vagrant.configure("2") do |config|
 #      i.ssh.username = "ssh_user" 
 #      i.ssh.password = "ssh_password"
 #      i.vm.network "public_network", bridge: "enp0s10", ip: "192.168.50.52", auto_config: true ###FOR LINUX EXTERNAL NETWORK
-      i.vm.network "public_network", bridge: "en0: Wi-Fi (Wireless)", ip: "192.168.50.52", auto_config: true ###FOR MAC EXTERNAL NETWORK   
+      i.vm.network "public_network", bridge: "en0: Wi-Fi", ip: "192.168.50.52", auto_config: true ###FOR MAC EXTERNAL NETWORK   
 
 #      i.vbguest.auto_update = false
 
@@ -37,7 +39,7 @@ Vagrant.configure("2") do |config|
       end
 
       i.vm.provision "shell", inline: "mkdir -p /home/vagrant/.ssh/"
-      i.vm.provision "file", source: "../ansible/ansible.pub", destination: "/home/vagrant/.ssh/ansible.pub"
+      i.vm.provision "file", source: "#{guest_sshkeys}", destination: "/home/vagrant/.ssh/ansible.pub"
       i.vm.provision "shell", inline: "cat /home/vagrant/.ssh/ansible.pub >> /home/vagrant/.ssh/authorized_keys"
 
       i.vm.provision "shell", path: "./provision.sh", run: "once"
@@ -52,7 +54,7 @@ Vagrant.configure("2") do |config|
       i.vm.provision "shell", run: "once", privileged: true, inline: <<-SHELL
         sudo useradd -m -s /bin/bash -U #{user}
           sudo mkdir /home/#{user}/.ssh
-          sudo cp #{guest_sshkeys} /home/#{user}/.ssh/authorized_keys
+          sudo cp /home/vagrant/.ssh/authorized_keys /home/#{user}/.ssh/authorized_keys
         sudo chown -R #{user}:#{user} /home/#{user}
         sudo su
         echo "%#{user} ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/#{user}
