--- a/debian/Vagrantfile
+++ b/debian/Vagrantfile
@@ -42,7 +42,7 @@ Vagrant.configure("2") do |config|
 #      i.vbguest.auto_update = false
 
       i.vm.provision "shell", inline: "mkdir -p /home/vagrant/.ssh/"
-      i.vm.provision "file", source: "../ansible/ansible.pub", destination: "/home/vagrant/.ssh/ansible.pub"
+      i.vm.provision "file", source: "#{guest_sshkeys}", destination: "/home/vagrant/.ssh/ansible.pub"
       i.vm.provision "shell", inline: "cat /home/vagrant/.ssh/ansible.pub >> /home/vagrant/.ssh/authorized_keys"
 
       i.vm.provision "shell", path: "./provision.sh", run: "once"        
