--- a/debian11awx/Vagrantfile
+++ b/debian11awx/Vagrantfile
@@ -5,7 +5,7 @@
 # configures the configuration version (we support older styles for
 # backwards compatibility). Please don't change it unless you know what
 # you're doing.
-manager_hostname = "debian10awx"
+manager_hostname = "debian11awx"
 
 Vagrant.configure("2") do |config|
     config.vm.provider "virtualbox" do |v|
@@ -13,13 +13,15 @@ Vagrant.configure("2") do |config|
         v.customize ["modifyvm", :id, "--boot1", "disk"]
         v.customize ["modifyvm", :id, "--boot2", "none"]
         v.customize ["modifyvm", :id, "--boot3", "none"]
+        v.customize ["modifyvm", :id, "--vram",  "16"]
         v.customize ["modifyvm", :id, "--graphicscontroller", "none"]
+        v.customize ["modifyvm", :id, "--vrde",  "off"]
         v.memory = 4096
         v.cpus = 2
         v.name = "#{manager_hostname}"
     end
-    config.vm.define "debian10awx" do |i|
-      i.vm.box = "debian/buster64"
+    config.vm.define "debian11awx" do |i|
+      i.vm.box = "generic/debian11"
       i.vm.hostname = "#{manager_hostname}"
 #      i.vm.base_mac = "mac_address" 
 #      i.ssh.username = "ssh_user" 
@@ -27,14 +29,14 @@ Vagrant.configure("2") do |config|
 #      i.vm.network "private_network", ip: "192.168.90.10"
 #      i.vm.network "forwarded_port", guest: 80, host: 8082
 #      i.vm.network "public_network", bridge: "enp0s10", ip: "192.168.50.54", auto_config: true ###FOR LINUX EXTERNAL NETWORK
-      i.vm.network "public_network", bridge: "en0: Wi-Fi (Wireless)", ip: "192.168.50.54", auto_config: true ###FOR MAC EXTERNAL NETWORK   
+      i.vm.network "public_network", bridge: "en0: Wi-Fi", ip: "192.168.50.54", auto_config: true ###FOR MAC EXTERNAL NETWORK   
 
       if File.file?("./hosts") 
         i.vm.provision "file", source: "hosts", destination: "/tmp/hosts"
         i.vm.provision "shell", inline: "cat /tmp/hosts >> /etc/hosts", privileged: true
       end
       
-#      i.vbguest.auto_update = false
+      # i.vbguest.auto_update = true
 
 #      i.ssh.private_key_path = "/home/madmin/.ssh/id.rsa.pub"
 
