--- a/freebsd/Vagrantfile
+++ b/freebsd/Vagrantfile
@@ -13,7 +13,9 @@ Vagrant.configure("2") do |config|
         v.customize ["modifyvm", :id, "--boot1", "disk"]
         v.customize ["modifyvm", :id, "--boot2", "none"]
         v.customize ["modifyvm", :id, "--boot3", "none"]
+        v.customize ["modifyvm", :id, "--vram",  "16"]
         v.customize ["modifyvm", :id, "--graphicscontroller", "none"]
+        v.customize ["modifyvm", :id, "--vrde",  "off"]
         v.memory = 512
         v.cpus = 2
         v.name = "#{manager_hostname}"
@@ -28,7 +30,7 @@ Vagrant.configure("2") do |config|
 #      i.vm.network "forwarded_port", guest: 80, host: 8082
 
 #      i.vm.network "public_network", bridge: "enp0s10", ip: "192.168.50.57", auto_config: true ###FOR LINUX EXTERNAL NETWORK
-      i.vm.network "public_network", bridge: "en0: Wi-Fi (Wireless)", ip: "192.168.50.57", auto_config: true ###FOR MAC EXTERNAL NETWORK   
+      i.vm.network "public_network", bridge: "en0: Wi-Fi", ip: "192.168.50.57", auto_config: true ###FOR MAC EXTERNAL NETWORK   
 
       if File.file?("./hosts") 
         i.vm.provision "file", source: "hosts", destination: "/tmp/hosts"
