--- a/ubuntu/Vagrantfile
+++ b/ubuntu/Vagrantfile
@@ -13,7 +13,9 @@ Vagrant.configure("2") do |config|
         v.customize ["modifyvm", :id, "--boot1", "disk"]
         v.customize ["modifyvm", :id, "--boot2", "none"]
         v.customize ["modifyvm", :id, "--boot3", "none"]
+        v.customize ["modifyvm", :id, "--vram",  "16"]
         v.customize ["modifyvm", :id, "--graphicscontroller", "none"]
+        v.customize ["modifyvm", :id, "--vrde",  "off"]
         v.memory = 2048
         v.cpus = 2
         v.name = "#{manager_hostname}"
@@ -27,7 +29,7 @@ Vagrant.configure("2") do |config|
 #      i.ssh.password = "ssh_password"
 
 #      i.vm.network "public_network", bridge: "enp0s10", ip: "192.168.50.60", auto_config: true ###FOR LINUX EXTERNAL NETWORK
-      i.vm.network "public_network", bridge: "en0: Wi-Fi (Wireless)", ip: "192.168.50.60", auto_config: true ###FOR MAC EXTERNAL NETWORK
+      i.vm.network "public_network", bridge: "en0: Wi-Fi", ip: "192.168.50.60", auto_config: true ###FOR MAC EXTERNAL NETWORK
 
 
       if File.file?("./hosts") 
